Social login routes added
